load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "answerer_proto",
    srcs = ["answerer.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@grpc_proto//:channelz_proto",
    ],
)

go_proto_library(
    name = "answerer_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/110y/answerer-api/v1",
    protos = [":answerer_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//channelz/grpc_channelz_v1:go_default_library",
    ],
)
